# Checkers

./: .clang-format  CMakeLists.txt
include/: board.h  checker.h  game.h  player.h  position.h
src/: board.cpp  checker.cpp  game.cpp  main.cpp  player.cpp  position.cpp
test/include/: test.h  test_board.h  test_checker.h  test_player.h  test_position.h
test/src/: test.cpp  test_board.cpp  test_checker.cpp  test_player.cpp  test_position.cpp
